GNOME Bugzilla – Bug 614915
Incorrect image rendering in PDF files
Last modified: 2010-04-06 16:19:26 UTC
The second page of this file http://giuliopaci.interfree.it/bugsreports/slides.pdf is rendered uncorrectly in evince 2.28.2 as it is distributed in Debian squeeze. On the same system, the PDF is correctly rendered by both xpdf and okular. The problem is that on the second page some images should be faded, just like their captions are, while they are not.
Created attachment 158014 [details] test with evince 2.30.x I test the pdf in evince 2.30.x with libpoppler-glib4 0.12.4-0ubuntu4, libpoppler5 0.12.4-0ubuntu4 and poppler-utils 0.12.4-0ubuntu4 should look like it?
It's a bug in poppler cairo backend, I've just fixed it in git master: http://cgit.freedesktop.org/poppler/poppler/commit/?id=1422802f029483ad3e62a3a13e66b2d3990ac58f Thanks for reporting.
@Fabio Duràn Verdugo: no, that's an example of the incorrect rendering. @Carols Garcia Campos: I didn't tested the code, but looking at it, it seems to me that You got the problem correctly. Thank You very much for all Your effort in this project and for fixing this BUG so quicly.