[cairo] Use current fill_opacity when drawing soft masked images

Fixes GNOME Bug https://bugzilla.gnome.org/show_bug.cgi?id=614915